--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.4",
+        "guzzlehttp/guzzle": "^7.5",
+        "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
         "panique/laravel-sass": "dev-master"
