--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "panique/laravel-sass": "dev-master"
     },
     "require-dev": {
