--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|~8.0.0",
+        "aws/aws-sdk-php": "^3.238",
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.4",
         "guzzlehttp/guzzle": "^7.5",
